# shannon-switching-game

./: LICENSE  README.md  game.py  graph.py  main.py  pyproject.toml  visualization.ipynb
input/: example_graph_1.txt  example_graph_2.txt
